andorid build prep

--- a/web/index.html
+++ b/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>emira_all_in_one_mob</title>
+  <title>Emira E-Visa</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
